package com.irina.myfirstgame.world;

/**
 * Représente la surface du monde.
 * <p>
 * Stub pour une fonctionnalité future de gestion de la surface.
 * </p>
 *
 * @author Irina
 * @version 1.0
 * @since 1.0
 */
public class Surface {
    public String skyColor;
    public int hazardLevel;
}

