package com.irina.myfirstgame.world.tiles;

import com.irina.myfirstgame.world.Tile;
import com.irina.myfirstgame.world.Surface;
import com.irina.myfirstgame.world.Underworld;

/**
 * Tuile représentant un tunnel de tuyau.
 * <p>
 * Stub pour une fonctionnalité future de connexion entre Surface et Underworld.
 * </p>
 *
 * @author Irina
 * @version 1.0
 * @since 1.0
 */
public class PipeTunnel extends Tile {
    public void connect(Surface surface, Underworld underworld) {
    }
}

