package com.irina.myfirstgame.interfaces;

/**
 * Interface pour les tuiles qui peuvent être creusées.
 *
 * @author Irina
 * @version 1.0
 * @since 1.0
 */
public interface Diggable {
    void dig();
}

