package com.irina.myfirstgame.world;

/**
 * Représente un niveau du jeu avec ses règles de spawn.
 * <p>
 * Stub pour une fonctionnalité future de gestion des niveaux.
 * </p>
 *
 * @author Irina
 * @version 1.0
 * @since 1.0
 */
public class Level {
    private String name;
    private int difficulty;
    private SpawnRules spawnRules;
    
    public SpawnRules getSpawnRules() {
        return null;
    }
}

