package com.irina.myfirstgame.world;

/**
 * Représente le monde souterrain.
 * <p>
 * Stub pour une fonctionnalité future de gestion du monde souterrain.
 * </p>
 *
 * @author Irina
 * @version 1.0
 * @since 1.0
 */
public class Underworld {
    public int depth;
    public float density;
}

